  10 Feb 2013; Manuel Rueger (mrueg) gentoo@rueg.eu docopt-0.4.1.ebuild,
  docopt-0.6.1.ebuild:
  dev-python/docopt: Add setuptools dependency

*docopt-0.4.1 (10 Feb 2013)

  10 Feb 2013; Manuel Rueger (mrueg) gentoo@rueg.eu +docopt-0.4.1.ebuild:
  dev-python/docopt: Add outdated version, needed by onkyo-eiscp

*docopt-0.6.1 (10 Feb 2013)

  10 Feb 2013; Manuel Rueger (mrueg) gentoo@rueg.eu +docopt-0.6.1.ebuild,
  +metadata.xml:
  dev-python/docopt: Initial version