@@ -1,6 +1,1 @@
-DIST docopt-0.4.1.tar.gz 4846 SHA256 a3d558f66ae22ca771a6cdef48598541e352db6ee3258b286e40f39ff0f5dcb1 SHA512 64edfc0cc1f633a9a55cd2bee40349dea23b1d5636037bbc276dd8ae007dd8c55bb1698fb48c0afa48296d320af2e0c119f72aa35f9814d7c16ada9994f1a04c WHIRLPOOL 717f928bebe36407ec77a988d04d266a7ee91b8150c09a353e4dd26ecb5ecb12424e270a4981b17b18329ba7a9963e221023f9bda9ee72c6d20f73df35ad65f0
 DIST docopt-0.6.1.tar.gz 25815 SHA256 71ad940a773fbc23be6093e9476ad57b2ecec446946a28d30127501f3b29aa35 SHA512 8316a1fbd7253d2f7bed0baf07bc023d53b29e01abe69a1898a381c54321024e2f075567cc93488283a5125d7a82c32180f2a99ec07a9ec778e064c0a72e9cc1 WHIRLPOOL afa6dd3770904760b6352bf7a2f9c437df4212b28a65856986f3a28fb441dc2aecf1af5ef698e2f463df74c5087a4962fc56eee99d797aa172b7c766b5f22909
-EBUILD docopt-0.4.1.ebuild 467 SHA256 debe089a8ed2d9cde126ac1f73dc73ced3b1cc9334600bb59fd8a39c9260175a SHA512 3088c66c7d1994b4d62e5a19bf99902c4a6b17e9a01349be26b4c67b10ce3cf9b30c02e79837653ccefa96d054e16c26516e6bdfd6395635767a0ce7061bc0b6 WHIRLPOOL 4ee57e43fdaa0f96a69087d4bf1825e23d2363d159c6547741162e9611b0a89447903727ddc8f0ea4dc92a59f9fa30253db1862798392f5dcb8c5a5ff4898dde
-EBUILD docopt-0.6.1.ebuild 467 SHA256 debe089a8ed2d9cde126ac1f73dc73ced3b1cc9334600bb59fd8a39c9260175a SHA512 3088c66c7d1994b4d62e5a19bf99902c4a6b17e9a01349be26b4c67b10ce3cf9b30c02e79837653ccefa96d054e16c26516e6bdfd6395635767a0ce7061bc0b6 WHIRLPOOL 4ee57e43fdaa0f96a69087d4bf1825e23d2363d159c6547741162e9611b0a89447903727ddc8f0ea4dc92a59f9fa30253db1862798392f5dcb8c5a5ff4898dde
-MISC ChangeLog 470 SHA256 de4689d0002b9e96112f45a0ec0f7790247b3c55d3018236af80ad6b344422b9 SHA512 da7326007358272edd89982329e786edf8871c1f1d4827792b0f5825be2752ded8da2acdfdbb3e4f2f235bbdebd0a0d9f3d097311874e0d95c60deb50d98f64a WHIRLPOOL d378b3282f2dac86ad078d0a1cac868755db8033ddd727a432f9a099bdfe90cc47d5809898525310e15fb057ee61f2a5bf278e525b5524b15e49e3d3c4dcf04d
-MISC metadata.xml 237 SHA256 7aebf1a287d9d2d4fa5b66af4c801da2083b6bc7d3cd077c235869ade1fb960d SHA512 e9249ef4ab11f8463a54b559634717a35dcd23da7e4d233feb223f3db7847e0638a5a3c89fb23a05c567251dde2e796c2ce3cd1efd57ff1a513c6fe55f9978a8 WHIRLPOOL 01e3ce0b931af3ce0389559235d360f5278067cb93376de4bf06a4e640fe54619595ebde1b8c811b64cb2a3aeab2b61ed54052f6e33de9470342c4cd27ddd443
