@@ -1,18 +1,0 @@
-# Copyright 1999-2013 Gentoo Foundation
-# Distributed under the terms of the GNU General Public License v2
-# $Header: $
-
-EAPI=5
-
-PYTHON_COMPAT=( python2_7 python3_2 )
-inherit distutils-r1
-
-DESCRIPTION="Command line interface creator written in Python"
-HOMEPAGE="http://docopt.org http://pypi.python.org/pypi/docopt"
-SRC_URI="mirror://pypi/${PN:0:1}/${PN}/${P}.tar.gz"
-
-LICENSE="MIT"
-SLOT="0"
-KEYWORDS="~amd64"
-IUSE=""
-DEPEND="dev-python/setuptools[${PYTHON_USEDEP}]"
