@@ -4,7 +4,7 @@
 
 EAPI=5
 
-PYTHON_COMPAT=( python2_7 python3_2 )
+PYTHON_COMPAT=( python{2_6,2_7,3_2,3_3} )
 inherit distutils-r1
 
 DESCRIPTION="Command line interface creator written in Python"
